# ray-serve

./: README.md  config.yaml  curl.sh  pyproject.toml  start.sh
ray_serve/: batch.py  main.py  sentiment.py  translation.py
