[tool.poetry]
name = "ray-serve"
version = "0.1.0"
description = ""
authors = ["Ben Lambert <blambert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ray = {extras = ["serve"], version = "^2.24.0"}
transformers = "^4.41.2"
torch = "~2.2.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
