[project]
name = "ray-serve"
version = "0.1.0"
description = "Batched sentiment analysis with Ray Serve"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "ray[serve]>=2.54.0",
    "transformers>=4.57.0",
    "torch>=2.10.0",
    "numpy>=2.2.0",
]

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "black>=24.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
